# staged

./: .gitignore  .travis.yml  cabal.9.project  cabal.haskell-ci  cabal.project
.github/workflows/: haskell-ci.yml
agda/: Stream.agda
agda/SOP/: NP.agda  NS.agda
scripts/: gen.hs
staged-commons/: staged-commons.cabal
staged-commons/example/: Examples.hs  Main.hs
staged-commons/src/Staged/: Commons.hs  Compat.hs
staged-examples/: staged-examples.cabal
staged-examples/src/: FileStats.hs  FileStatsConduit.hs  FileStatsConduitNoRetry.hs  UTF8.hs  Unicode.hs  utf8-decode.hs
staged-examples/src/UTF8/: States.hs  Stream.hs
staged-examples/src/Unicode/: Types.hs
staged-examples/src/Unicode/ByteString/: Source.hs
staged-examples/src/Unicode/PrimArray/: Sink.hs
staged-examples/src/Unicode/UTF16/: Encoder.hs
staged-examples/src/Unicode/UTF8/: Decoder.hs
staged-gg/: staged-gg.cabal
staged-gg/src/Generics/Deriving/TH/: Internal.hs
staged-gg/src/Staged/GHC/: Generics.hs
staged-gg/src/Staged/GHC/Generics/: Examples.hs  Instances.hs  Internal.hs  TH.hs  Types.hs
staged-gg/src/Staged/GHC/Generics/Examples/: Foo.hs  Functor.hs  Monoid.hs
staged-gg/src/Staged/GHC/Generics/TH/: Names.hs
staged-kleene/: staged-kleene.cabal
staged-kleene/src/Kleene/RE/: NonEps.hs
staged-kleene/src/Staged/: Kleene.hs
staged-streams/: staged-streams.cabal
staged-streams-resourcet/: staged-streams-resourcet.cabal
staged-streams-resourcet/src/Staged/Stream/: ByteString.hs  Handle.hs  ResourceT.hs
staged-streams-unicode/: LICENSE  staged-streams-unicode.cabal
staged-streams-unicode/bench/: json-bench.hs  json-weigh.hs
staged-streams-unicode/cli/: utf8-decode.hs
staged-streams-unicode/common/: UnescapePure.hs  UnescapePure2.hs
staged-streams-unicode/src/: Unicode.hs
staged-streams-unicode/src/Unicode/: JSON.hs
staged-streams-unicode/src/Unicode/ByteString/: Source.hs
staged-streams-unicode/src/Unicode/JSON/: Decoder.hs
staged-streams-unicode/src/Unicode/PrimArray/: Sink.hs
staged-streams-unicode/src/Unicode/Text/: Sink.hs
staged-streams-unicode/src/Unicode/UTF8/: Decoder.hs  Encoder.hs
staged-streams-unicode/tests/: json-tests.hs  ss-unicode-tests.hs
staged-streams/src/: Symantics.hs
staged-streams/src/Data/SOP/: Fn.hs  Sh.hs
staged-streams/src/Data/SOP/Fn/: All.hs  Append.hs  Concat.hs  ConcatMapAppend.hs  Cons.hs  Flatten.hs  LiftA2Cons.hs  MapAppend.hs  MapConcat.hs  MapCons.hs  Sequence.hs
staged-streams/src/Staged/: Stream.hs
staged-streams/src/Staged/Stream/: Combinators.hs  Convenience.hs  Directory.hs  Fallible.hs  Internal.hs  Pure.hs  States.hs  Step.hs  Type.hs
staged-streams/src/Staged/Stream/Fallible/: Combinators.hs  Convenience.hs  Step.hs  Type.hs
staged-streams/src/Staged/Stream/Final/: Combinators.hs  Convenience.hs  Internal.hs  States.hs  Type.hs
staged-streams/src/Staged/Stream/Pure/: Combinators.hs  Convenience.hs  Examples.hs  Type.hs
staged-streams/test/: Coutts.hs  Families.hs  Inspection.hs  QC.hs
staged-streams/test/Inspection/: StreamPure.hs
staged-streams/test/Test/Tasty/: Inspection.hs
