cabal-version: 2.2
name:          staged-commons
version:       0.1
synopsis:      Common utilities for staged programming with TTH
category:      Staged, Streaming
description:
  Common utilities for staged programming (i.e. Typed Template Haskell). 

author:        Oleg Grenrus
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
license:       BSD-3-Clause
license-file:  LICENSE
tested-with:
  GHC ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.3 || ==8.10.1

library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src

  -- ghc-boot dependencies
  build-depends:
    , base              >=4.9     && <4.15
    , containers        ^>=0.5.7.1 || ^>=0.6.0.1
    , template-haskell  >=2.11    && <2.17
    , transformers      ^>=0.5.2.0

  -- commons for staged programming
  exposed-modules:
    Staged.Commons
    Staged.Compat

test-suite staged-commons-example
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   example
  main-is:          Main.hs
  other-modules:    Examples
  build-depends:
    , base
    , staged-commons
    , template-haskell
    , transformers
    , containers
