cabal-version: 2.2
name:          staged-examples
version:       0
synopsis:      Examples of @staged-streams@ library usaage.
category:      Staged, Generics
description:   Examples and comparisons of @staged-streams@ library usage.
author:        Oleg Grenrus
maintainer:    Oleg Grenrus
license:       BSD-3-Clause
license-file:  LICENSE
tested-with:
  GHC ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.4
   || ==9.0.1

executable file-stats-conduit
  default-language: Haskell2010
  ghc-options:      -Wall -rtsopts -threaded
  hs-source-dirs:   src
  main-is:          FileStatsConduit.hs
  build-depends:
    , base        <5
    , bytestring
    , conduit     ^>=1.3.1.2
    , resourcet

executable file-stats-conduit-no-retry
  default-language: Haskell2010
  ghc-options:      -Wall -rtsopts -threaded
  hs-source-dirs:   src
  main-is:          FileStatsConduitNoRetry.hs
  build-depends:
    , base
    , bytestring
    , conduit     ^>=1.3.1.2
    , resourcet

-- build-depends: dump-core
-- ghc-options: -fplugin=DumpCore

executable file-stats
  default-language: Haskell2010
  ghc-options:      -Wall -rtsopts -threaded
  hs-source-dirs:   src
  main-is:          FileStats.hs
  build-depends:
    , base
    , bytestring
    , generics-sop
    , resourcet
    , staged-streams
    , staged-streams-resourcet

executable utf8-decode
  default-language: Haskell2010
  ghc-options:      -Wall -rtsopts -threaded -fmax-refinement-hole-fits=0
  hs-source-dirs:   src
  main-is:          utf8-decode.hs
  build-depends:
    , base
    , bytestring
    , primitive
    , QuickCheck
    , sop-core
    , staged-streams
    , text
    , utf8-string

  other-modules:
    Unicode
    Unicode.ByteString.Source
    Unicode.Types
    Unicode.UTF16.Encoder
    Unicode.UTF8.Decoder

  if !impl(ghc >=9)
    buildable: False
