cabal-version: 2.2
name:          staged-streams-resourcet
version:       0.1
synopsis:      Combinators for staged using resourcet
category:      Staged, Streaming
description:
  Zero-overhead streams using staged programming (i.e. Typed Template Haskell).
  .
  This package contains combinators relying on 'MonadResource'
  type-class from the @resourcet@ package, in other words
  streams which allocate some resources.

author:        Oleg Grenrus, Andres Löh
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
license:       BSD-3-Clause
license-file:  LICENSE
tested-with:
  GHC ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.3 || ==8.10.1

library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src

  -- ghc-boot dependencies
  build-depends:
    , base              >=4.9      && <4.15
    , bytestring        ^>=0.10.8.1
    , directory         ^>=1.3.0.0
    , filepath          ^>=1.4.1.1
    , template-haskell  >=2.11     && <2.17
    , transformers      ^>=0.5.2.0

  -- staged dependency
  build-depends:    staged-streams ^>=0.1

  -- other dependencies
  build-depends:
    , generics-sop  ^>=0.5.0.0
    , resourcet     ^>=1.2.2

  exposed-modules:
    Staged.Stream.ByteString
    Staged.Stream.Handle
    Staged.Stream.ResourceT
