cabal-version: 2.2
name:          staged-streams-unicode
version:       0
synopsis:      Unicode encoding transformarsions using @staged-streams@
category:      Staged, Generics
description:   Unicode encoding transformarsions using @staged-streams@.
author:        Oleg Grenrus
maintainer:    Oleg Grenrus
license:       BSD-3-Clause
license-file:  LICENSE
tested-with:   GHC ==9.0.1

library
  default-language: Haskell2010
  ghc-options:      -Wall -fmax-refinement-hole-fits=0
  hs-source-dirs:   src
  exposed-modules:
    Unicode
    Unicode.ByteString.Source
    Unicode.JSON
    Unicode.JSON.Decoder
    Unicode.PrimArray.Sink
    Unicode.Types
    Unicode.UTF16.Encoder
    Unicode.UTF8.Decoder
    Unicode.UTF8.Encoder

  build-depends:
    , base            ^>=4.15.0.0
    , bytestring
    , primitive
    , sop-core
    , staged-streams
    , text

executable utf8-decode
  default-language: Haskell2010
  ghc-options:      -Wall -rtsopts -threaded -fmax-refinement-hole-fits=0
  hs-source-dirs:   cli
  main-is:          utf8-decode.hs
  build-depends:
    , base
    , bytestring
    , QuickCheck
    , staged-streams
    , staged-streams-unicode
    , text
    , utf8-string

test-suite ss-unicode-tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests common
  main-is:          ss-unicode-tests.hs
  build-depends:
    , base
    , bytestring
    , QuickCheck
    , staged-streams
    , staged-streams-unicode
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text

test-suite json-tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests common
  main-is:          json-tests.hs
  other-modules:
    UnescapePure
    UnescapePure2

  build-depends:
    , base
    , bytestring
    , QuickCheck
    , staged-streams
    , staged-streams-unicode
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text

benchmark json-bench
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench common
  main-is:          json-bench.hs
  other-modules:    UnescapePure
  build-depends:
    , base
    , bytestring
    , criterion
    , staged-streams
    , staged-streams-unicode
    , text

benchmark json-weigh
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench common
  main-is:          json-weigh.hs
  other-modules:    UnescapePure
  build-depends:
    , base
    , bytestring
    , staged-streams
    , staged-streams-unicode
    , text
    , weigh
